# HaskellPlugin

./: HaskellPlugin_Prefix.pch  Info.plist
HaskellPlugin.xcodeproj/: humasect.mode1  humasect.pbxuser  project.pbxproj
Headers/: XCPSpecifications.h
Resources/: Cabal.pblangspec  Haskell.pbRTSspec_  Haskell.pbbsetspec  Haskell.pbcompspec  Haskell.pbfilespec  Haskell.pblangspec  Haskell.pblinkspec  Haskell.pbpackspec  Haskell.pbprodspec  Haskell.xcbuildrules  Haskell.xctxtmacro
Resources/English.lproj/: org.glasgow.haskell.buildsettings.compiler-linker.strings
Resources/Resources-1.moved-aside/: Haskell.pblinkspec
Sources/: HYCompilerSpecificationHaskell.h  HYCompilerSpecificationHaskell.m  HYCompilerSpecificationHaskellC.h  HYCompilerSpecificationHaskellC.m  HYHaskellCommandOutputParser.h  HYHaskellCommandOutputParser.m  HYHaskellProductType.h  HYHaskellProductType.m  HYLinkerSpecificationHaskell.h  HYLinkerSpecificationHaskell.m
Templates/: 66-haskell-un_commentLines.pl  Shell Tool.trgttmpl  Static Library.trgttmpl  TODO
Templates/Cabal executable package.pbfiletemplate/: package.cabal
Templates/Cabal library package.pbfiletemplate/: TemplateInfo.plist  package.cabal
Templates/Haskell C module.pbfiletemplate/: Module.hsc  TemplateInfo.plist
Templates/Haskell module (FFI).pbfiletemplate/: Module.hs  TemplateInfo.plist
Templates/Haskell module.pbfiletemplate/: Module.hs  TemplateInfo.plist
